--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /ARRAYS_BIDIMENSIONALES/nbproject/private/
 /ARRAYS_BIDIMENSIONALES/build/
+/POO2_G2_Herencia/nbproject/private/
+/POO2_G2_Herencia/build/
+/Taller_Herencia/nbproject/private/
+/Taller_Herencia/build/
+/EJERCICIOS_ESTRUCTURA_DATOS/nbproject/private/
+/EJERCICIOS_ESTRUCTURA_DATOS/build/
+/EJERCICIOS_ESTRUCTURA_DATOS/dist/
