taller estructura de datos

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 /EJERCICIOS_ESTRUCTURA_DATOS/nbproject/private/
 /EJERCICIOS_ESTRUCTURA_DATOS/build/
 /EJERCICIOS_ESTRUCTURA_DATOS/dist/
+/JavaApplication26/nbproject/private/
+/Taller2Corte1_POO2_G2/nbproject/private/
+/Taller2Corte1_POO2_G2/build/
+/Taller2Corte1_POO2_G2/dist/
+/Ejercicios_Arreglos_Estructura_de_Datos/nbproject/private/
+/Ejercicios_Arreglos_Estructura_de_Datos/build/
