--- a/Taller_Herencia/build.xml
+++ b/Taller_Herencia/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Taller_Herencia" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Taller_Herencia.</description>
+<project name="POO2_G2_Taller_Herencia" default="default" basedir=".">
+    <description>Builds, tests, and runs the project POO2_G2_Taller_Herencia.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Taller_Herencia-impl.jar">
+        <target name="run" depends="POO2_G2_Taller_Herencia-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
