taller estructura de datos

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 /Taller2Corte1_POO2_G2/dist/
 /Ejercicios_Arreglos_Estructura_de_Datos/nbproject/private/
 /Ejercicios_Arreglos_Estructura_de_Datos/build/
+/JavaApplication32/nbproject/private/
+/JavaApplication32/build/
+/JavaApplication32/dist/
+/Parcial1_G2_Diego_Fernando_Muñoz/nbproject/private/
+/LISTAS_Estructura_de_Datos/nbproject/private/
+/LISTAS_Estructura_de_Datos/build/
+/POO2_G2_API/nbproject/private/
+/POO2_G2_API/build/
+/JavaApplication44/nbproject/private/
+/Taller_Estructur_de_Datos/nbproject/private/
+/Taller_Estructura_de_Datos/nbproject/private/
+/Taller_Estructura_de_Datos/build/
